<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.dragonet.proxy</groupId>
    <artifactId>dragonproxy-parent</artifactId>
    <version>0.3.4.5-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>DragonProxy Parent</name>
    <description>
        The parent module for DragonProxy, a proxy that allows Minecraft: Bedrock clients to connect to Minecraft: Java
        Edition servers.
    </description>
    <inceptionYear>2016</inceptionYear>
    <url>https://dragonet.org/</url>

    <organization>
        <name>DragonetMC</name>
        <url>https://github.com/DragonetMC/DragonProxy</url>
    </organization>

    <scm>
        <connection>scm:git:https://github.com/DragonetMC/DragonProxy.git</connection>
        <developerConnection>scm:git:git@github.com:DragonetMC/DragonProxy.git</developerConnection>
        <url>https://github.com/DragonetMC/DragonProxy</url>
    </scm>

    <ciManagement>
        <system>jenkins</system>
        <url>https://ci.codemc.org/job/DragonProxy/</url>
    </ciManagement>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/DragonetMC/DragonProxy/issues</url>
    </issueManagement>

    <distributionManagement>
        <snapshotRepository>
            <id>codemc-snapshots</id>
            <url>https://repo.codemc.org/repository/maven-snapshots/</url>
        </snapshotRepository>
        <repository>
            <id>codemc-releases</id>
            <url>https://repo.codemc.org/repository/maven-releases/</url>
        </repository>
    </distributionManagement>

    <modules>
        <module>commons</module>
        <module>protocol</module>
        <module>api</module>
        <module>proxy</module>
        <module>plugin</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <repositories>
        <repository>
            <id>codemc-repo</id>
            <url>https://repo.codemc.org/repository/maven-public</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <build>
        <defaultGoal>clean package</defaultGoal>
        <resources>
            <resource>
                <directory>src/main/resources/</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.0.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.0.2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>1.9</source>
                    <target>1.9</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>3.0</version>
                <configuration>
                    <header>licenseheader.txt</header>
                    <properties>
                        <owner>Dragonet Foundation</owner>
                        <link>https://github.com/DragonetMC/DragonProxy</link>
                    </properties>
                    <mapping>
                        <java>SLASHSTAR_STYLE</java>
                    </mapping>
                    <includes>
                        <include>src/test/java/**</include>
                        <include>src/main/java/**</include>
                    </includes>
                    <useDefaultExcludes>true</useDefaultExcludes>
                    <excludes>
                        <exclude>**/co/aikar/**</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.21.0</version>
                <configuration>
                    <skip>true</skip> <!-- No unit tests to run atm -->
                    <!-- Force the right file encoding during unit testing -->
                    <argLine>-Dfile.encoding=${project.build.sourceEncoding} @{argLine}</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.0.2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <show>public</show>
                    <failOnError>false</failOnError>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.1.1</version>
                <configuration>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <minimizeJar>true</minimizeJar>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>2.5.2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.2</version>
            </plugin>
        </plugins>
    </build>

</project>
